--- a/public/app/app/styles/main.scss
+++ b/public/app/app/styles/main.scss
@@ -7,3 +7,16 @@ body {
   padding-bottom: 20px;
 }
 
+.lists {
+  list-style-type: none;
+  padding-left: 0px;
+  li {
+    background: #3276b1;
+    padding: 10px;
+    margin-top: 2px;
+    a {
+      color: white;
+    }
+  }
+}
+
