--- a/public/app/app/scripts/templates/main.hbs
+++ b/public/app/app/scripts/templates/main.hbs
@@ -6,9 +6,8 @@
           <div id="lists"></div>
         </div>
         <div class="col-md-9">
-          <h2>To Dos</h2>
-          <hr/>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Add Item</a></p>
+          <div id="todos">
+          </div>
         </div>
       </div>
     </div>
