--- a/public/backbone/app/scripts/templates/main.hbs
+++ b/public/backbone/app/scripts/templates/main.hbs
@@ -1,6 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <div class="messages"></div>
+      <div class="error-messages"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       <div class="row">
         <div class="col-md-3">
           <div id="lists"></div>
