--- a/public/backbone/app/scripts/templates/lists.hbs
+++ b/public/backbone/app/scripts/templates/lists.hbs
@@ -3,9 +3,9 @@
 
 <form action="/api/v1/lists/" method="post" class="form-inline" id="list-form" role="form">
   <div class="form-group">
-    <input type="text" class="form-control" name="name" placeholder="Enter List Name">
+    <input type="text" class="form-control" name="name" placeholder="Enter list name">
   </div>
-  <button type="submit" class="btn btn-primary">Add List</button>
+  <button type="submit" class="btn btn-success">Add List</button>
 </form>
 
 <ul class="lists">
