Delete of list mostly done

--- a/public/backbone/app/scripts/templates/lists.hbs
+++ b/public/backbone/app/scripts/templates/lists.hbs
@@ -10,6 +10,9 @@
 
 <ul class="lists">
   {{#each lists}}
-    <li><a href="#/lists/{{id}}" class="list" data-id="{{id}}">{{name}}</a></li>
+    <li>
+      <a href="#/lists/{{id}}" class="list" data-id="{{id}}">{{name}}</a>
+      <a class="delete pull-right" data-id="{{id}}">✖</a>
+    </li>
   {{/each}}
 </ul>
