--- a/public/backbone/app/scripts/templates/login.hbs
+++ b/public/backbone/app/scripts/templates/login.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h1>ToDo App</h1>
+      <h1>★ ToDo App ★</h1>
       <div class="panel panel-default">
         <div class="panel-heading">Please login:</div>
         <div class="panel-body">
@@ -12,9 +12,9 @@
             </div>
             <div class="form-group">
               <label for="password">Password:</label>
-              <input type="password" class="form-control" name="password" placeholder="Password">
+              <input type="password" class="form-control" name="password" placeholder="Enter password">
             </div>
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-success">Login</button>
           </form>
         </div>
       </div>
