Integrating the token for backbone app

--- a/public/backbone/app/scripts/templates/login.hbs
+++ b/public/backbone/app/scripts/templates/login.hbs
@@ -5,7 +5,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Please login:</div>
         <div class="panel-body">
-          <form>
+          <form id="login-form">
             <div class="form-group">
               <label for="email">Email:</label>
               <input type="email" class="form-control" name="email" placeholder="Enter email">
