Cleanup and logout works

--- a/public/backbone/app/scripts/templates/_navbar.hbs
+++ b/public/backbone/app/scripts/templates/_navbar.hbs
@@ -1,14 +1,14 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">To Do App</a>
+      <span class="navbar-brand">To Do App</span>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="#home">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Logout</a></li>
+        <li class="active"><a href="#logout" id="logout">Logout</a></li>
       </ul>
     </div>
   </div>
