--- a/public/backbone/app/scripts/templates/lists.hbs
+++ b/public/backbone/app/scripts/templates/lists.hbs
@@ -10,7 +10,7 @@
 
 <ul class="lists">
   {{#each lists}}
-    <li>
+    <li class="{{class}}">
       <a href="#/lists/{{id}}" class="list" data-id="{{id}}">{{name}}</a>
       <a class="delete pull-right" data-id="{{id}}">✖</a>
     </li>
