--- a/public/backbone/app/scripts/templates/main.hbs
+++ b/public/backbone/app/scripts/templates/main.hbs
@@ -13,6 +13,7 @@
         </div>
         <div class="col-md-9">
           <div id="todos">
+            <h2 class="gray">Please select a list</h2>
           </div>
         </div>
       </div>
