--- a/public/backbone/app/scripts/templates/login.hbs
+++ b/public/backbone/app/scripts/templates/login.hbs
@@ -8,11 +8,11 @@
           <form id="login-form">
             <div class="form-group">
               <label for="email">Email:</label>
-              <input type="email" class="form-control" name="email" placeholder="Enter email">
+              <input type="email" class="form-control" name="email" placeholder="Enter email (rocky@example.com)">
             </div>
             <div class="form-group">
               <label for="password">Password:</label>
-              <input type="password" class="form-control" name="password" placeholder="Enter password">
+              <input type="password" class="form-control" name="password" placeholder="Enter password (12345678)">
             </div>
             <button type="submit" class="btn btn-success">Login</button>
           </form>
