Some cleanup. App does not reload ever.

--- a/public/backbone/app/scripts/templates/lists.hbs
+++ b/public/backbone/app/scripts/templates/lists.hbs
@@ -12,7 +12,7 @@
   {{#each lists}}
     <li class="{{class}}">
       <a href="#/lists/{{id}}" class="list" data-id="{{id}}">{{name}}</a>
-      <a class="delete pull-right" data-id="{{id}}">✖</a>
+      <a href="#/lists/{{id}}/delete" class="delete pull-right" data-id="{{id}}">✖</a>
     </li>
   {{/each}}
 </ul>
